GNOME Bugzilla – Bug 642263
undefined reference to "GTK_IS_SOCKET" and "GTK_IS_PLUG", etc
Last modified: 2011-02-17 04:57:27 UTC
I have successfully compiled GTK 2,but when switch to GTK 3.0 compile, undefined reference occure when compile the module gail, the error reports undefined refernece to GTK_IS_SOCKET, gtk_socket_get_plug_window, GTK_IS_PLUG, etc for gail.c checking back the gtksocket.h and gtkplug.h, the GTK_IS_SOCKET is defined in GDK_WINDOWING_X11 block, but my env. is Windows. the same happend on gtkplug.h
those widgets have been made x11-specific in gtk3. The win32 and osx implementations were never more than stubs, really.
Here is my configure: $ ./configure --build=x86_64-w64-mingw32 CFLAGS="-I/usr/local/include" LDFLAGS= "-L/usr/local/lib" --enable-win32-backend --disable-x11-backend --disable-quart z-backend I have actually disable x11 and quartz backends,but i still got the error message: gailwindow.c: In function 'gail_window_real_initialize': gailwindow.c:229: warning: implicit declaration of function 'GTK_IS_PLUG' CCLD libgail.la Creating library file: .libs/libgail.dll.a .libs/libgail_la-gail.o:gail.c:(.text+0x4142): undefined reference to `GTK_IS_SO CKET' .libs/libgail_la-gail.o:gail.c:(.text+0x4153): undefined reference to `GTK_SOCKE T' .libs/libgail_la-gail.o:gail.c:(.text+0x415a): undefined reference to `gtk_socke t_get_plug_window' .libs/libgail_la-gailtoplevel.o:gailtoplevel.c:(.text+0x1e2): undefined referenc e to `GTK_IS_PLUG' .libs/libgail_la-gailtoplevel.o:gailtoplevel.c:(.text+0x556): undefined referenc e to `GTK_IS_PLUG' .libs/libgail_la-gailwindow.o:gailwindow.c:(.text+0x9e9): undefined reference to `GTK_IS_PLUG' collect2: ld returned 1 exit status does the stub really exist?