ifdef X11-specific parts in gail

GTK_IS_PLUG() and GTK_IS_SOCKET() now need this protection.
https://bugzilla.gnome.org/show_bug.cgi?id=642263