modules/other/gail/gail.c
@@ -302,6 +302,8 @@ gail_focus_watcher (GSignalInvocationHint *ihint,
           return TRUE;
         }
     }
+
+#ifdef GDK_WINDOWING_X11
   /*
    * If the focus widget is a GtkSocket without a plug
    * then ignore the focus notification as the embedded
@@ -310,6 +312,8 @@ gail_focus_watcher (GSignalInvocationHint *ihint,
   if (GTK_IS_SOCKET (widget) &&
       gtk_socket_get_plug_window (GTK_SOCKET (widget)) != NULL)
     return TRUE;
+#endif
+
   /*
    * The widget may not yet be visible on the screen so we wait until it is.
    */
